# RemoteLoggerSevenT

./: README.md  pyproject.toml
firmware/: .cproject  .gitignore  .mxproject  firmware.ioc
firmware/Core/Inc/: DataAcqTask.h  OutputTask.h
firmware/Core/Src/: DataAcqTask.c  OutputTask.c  freertos.c  main.c
foxglove/: SevenT-IMU-Telemetry.json
logs/: sevent_imu_2026-06-19_15-03-31.mcap  sevent_imu_2026-06-19_15-04-39.mcap  sevent_imu_2026-06-19_15-14-17.mcap  sevent_imu_2026-06-21_16-36-56.mcap
software/: __init__.py  csv_logger.py  foxglove_server.py  khoa_20260616_163959.csv  khoa_20260616_202616.csv  parser.py  pyproject.toml  schema.py
software/backend/: foxglove_server.py
software/sevent_telemetry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
