[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "sevent-telemetry"
version = "0.1.0"
description = "Foxglove WebSocket + MCAP bridge for SevenT STM32 IMU telemetry"
requires-python = ">=3.10"
dependencies = [
    "foxglove-websocket>=0.1.0",
    "mcap>=1.0.0",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
]


[project.scripts]
sevent-foxglove = "backend.foxglove_server:cli"
sevent-log = "backend.csv_logger:cli"


[tool.setuptools.packages.find]
where = ["software"]
